# targetprocess-mcp

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
src/: __init__.py  targetprocess_mcp.py
tests/: test_client.py  test_config.py  test_tools.py
