[project]
name = "targetprocess-mcp"
version = "0.1.0"
description = "MCP server for Target Process/Apptio Targetprocess"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
targetprocess-mcp = "targetprocess_mcp:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"